# Odoo-customizations

./: README.md
budget_report/budget_report/: INSTALLATION_GUIDE.txt  README.md  __manifest__.py
budget_report/budget_report/models/: __init__.py  budget_report_config.py  budget_report_wizard.py
budget_report/budget_report/reports/: __init__.py  budget_report_excel.py  budget_report_pdf.xml  budget_reports.xml
budget_report/budget_report/security/: ir.model.access.csv
budget_report/budget_report/views/: budget_report_config_views.xml  budget_report_menus.xml  budget_report_wizard_views.xml  hide_default_budget_menu.xml
budget_report/views/: budget_report_config_views.xml
caisse_management/: SESSION_SUMMARY.md
caisse_management/caisse_management/: README.md  __manifest__.py
caisse_management/caisse_management/controllers/: __init__.py
caisse_management/caisse_management/data/: caisse_data.xml
caisse_management/caisse_management/models/: __init__.py  caisse_config.py  caisse_disbursement.py  caisse_reconciliation.py  caisse_report_wizard.py  caisse_request.py  caisse_request_type.py
caisse_management/caisse_management/reports/: __init__.py  caisse_pdf_report.py  caisse_reports.xml
caisse_management/caisse_management/security/: caisse_security.xml  ir.model.access.csv
caisse_management/caisse_management/views/: caisse_config_views.xml  caisse_dashboard_views.xml  caisse_disbursement_views.xml  caisse_menus.xml  (+4 more)
contract/: README.md
contract/setup/_metapackage/: pyproject.toml
payroll_listings/: README_PDF.md
payroll_listings/payroll_listings/: README.md  __manifest__.py
(+29 files in other folders)
