[project]
name = "odoo-addons-oca-contract"
version = "18.0.20250926.0"
dependencies = [
    "odoo-addon-agreement_rebate_partner_company_group==18.0.*",
    "odoo-addon-contract==18.0.*",
    "odoo-addon-contract_analytic_tag==18.0.*",
    "odoo-addon-contract_forecast==18.0.*",
    "odoo-addon-contract_forecast_variable_quantity==18.0.*",
    "odoo-addon-contract_invoice_auto_validate==18.0.*",
    "odoo-addon-contract_invoice_start_end_dates==18.0.*",
    "odoo-addon-contract_line_successor==18.0.*",
    "odoo-addon-contract_mandate==18.0.*",
    "odoo-addon-contract_payment_mode==18.0.*",
    "odoo-addon-contract_price_revision==18.0.*",
    "odoo-addon-contract_queue_job==18.0.*",
    "odoo-addon-contract_sale==18.0.*",
    "odoo-addon-contract_sale_invoicing==18.0.*",
    "odoo-addon-contract_sale_mandate==18.0.*",
    "odoo-addon-contract_sale_payment_mode==18.0.*",
    "odoo-addon-contract_sale_transmit_method==18.0.*",
    "odoo-addon-contract_termination==18.0.*",
    "odoo-addon-contract_transmit_method==18.0.*",
    "odoo-addon-contract_update_last_date_invoiced==18.0.*",
    "odoo-addon-contract_variable_qty_prorated==18.0.*",
    "odoo-addon-contract_variable_qty_timesheet==18.0.*",
    "odoo-addon-contract_variable_quantity==18.0.*",
    "odoo-addon-product_contract==18.0.*",
    "odoo-addon-product_contract_variable_quantity==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
